--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "JSON": "^1.0.0",
     "mysql2": "^3.7.0",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2",
     "sequelize-extension": "^1.0.3",
-    "sequelize-extension-createdby": "^0.0.3"
+    "sequelize-extension-createdby": "^0.0.3",
+    "token": "^0.1.0",
+    "web": "^0.0.2"
   },
   "name": "server",
   "version": "1.0.0",
