--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "JSON": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.7.0",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2",
